fix title_wrap

--- a/style.scss
+++ b/style.scss
@@ -348,3 +348,12 @@ h1 {
 .section-title-wrapper {
   margin-bottom: 30px;
 }
+
+.title-wrap {
+  max-width: 90%;
+  margin-left: auto;
+
+  @media(max-width: 991px) {
+    max-width: 100%;
+  }
+}
